--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     <p class="card-text"><small class="text-muted">HTML | SCSS | JavaScript</small></p>
                     <hr class="coloredHr">
                    <div class="d-flex justify-content-between">
-                    <a href="#" class="btn btn-primary">View Live</a>
-                    <a href="#" class="btn btn-primary">View Code</a>
+                    <a href="https://azmsurov.github.io/DevLogs/" class="btn btn-primary">View Live</a>
+                    <a href="https://github.com/AzmSurov/DevLogs" class="btn btn-primary">View Code</a>
                    </div>
                   </div>
                 </div>
