--- a/index.html
+++ b/index.html
@@ -40,16 +40,24 @@
                 </div>
               </div>
               <!-- END OF DAY ONE  -->
-              <!-- <div class="col-sm-4">
+              <div class="col-sm-6"> 
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h5 class="card-title">Day 2 - Responsive Masonary Grid</h5>
+                    <p class="card-text">On my second day I created this Responsive Masonary layouts using CSS grid
+                       with a gradient background.
+                    </p>
+                    <p class="card-text"><small class="text-muted">HTML | SCSS | JavaScript</small></p>
+                    <hr class="coloredHr">
+                    <div class="d-flex justify-content-between">
+                      <a href="https://azmsurov.github.io/Responsive-Grid/" class="btn btn-primary">View Live</a>
+                      <a href="https://github.com/AzmSurov/Responsive-Grid" class="btn btn-primary">View Code</a>
+                     </div>
+                   </div>
                   </div>
                 </div>
               </div>
-              <div class="col-sm-4">
+              <!-- <div class="col-sm-4">
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title">Special title treatment</h5>
