New look on the dev's logs

--- a/index.html
+++ b/index.html
@@ -5,69 +5,22 @@
         <title>#100DaysOfCode</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="assets/styles/styles.css">
-        <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,900&display=swap" rel="stylesheet">
-       
-
+        <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
     </head>
     <body>
-        <div class="jumbotron">
-            <h1>Hello, world!</h1>
-            <p class=>Welcome to Azm's Dev Logs! With my inspiration master Fron-End Development, I decided to do the #100daysOfCode challenge. 
-                This way I'll have the practice and also showcase what I'll be coding the next 100 days.
-                I'll be adding a new project everyday!</p>
-            <hr class>
-            <p>This site is build using HTML, SCSS and JavaScript.</p>
-          </div>
-    
-          <div class="container">
-            <div class="row">
-              <!-- Start of DAY ONE  -->
-              <div class="col-sm-6"> 
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Day 1 - Dev's Log</h5>
-                    <p class="card-text">My first project of #100daysOfCode. I created this dev log to keep track of my
-                      porjects will be made in the next 90 days.</p>
-                    <p class="card-text"><small class="text-muted">HTML | SCSS | JavaScript</small></p>
-                    <hr class="coloredHr">
-                   <div class="d-flex justify-content-between">
-                    <a href="https://azmsurov.github.io/DevLogs/" class="btn btn-primary">View Live</a>
-                    <a href="https://github.com/AzmSurov/DevLogs" class="btn btn-primary">View Code</a>
-                   </div>
-                  </div>
-                </div>
-              </div>
-              <!-- END OF DAY ONE  -->
-              <div class="col-sm-6"> 
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Day 2 - Responsive Masonary Grid</h5>
-                    <p class="card-text">On my second day I created this Responsive Masonary layouts using CSS grid
-                       with a gradient background.
-                    </p>
-                    <p class="card-text"><small class="text-muted">HTML | SCSS | JavaScript</small></p>
-                    <hr class="coloredHr">
-                    <div class="d-flex justify-content-between">
-                      <a href="https://azmsurov.github.io/Responsive-Grid/" class="btn btn-primary">View Live</a>
-                      <a href="https://github.com/AzmSurov/Responsive-Grid" class="btn btn-primary">View Code</a>
-                     </div>
-                   </div>
-                  </div>
-                </div>
-              </div>
-              <!-- <div class="col-sm-4">
-                <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-              </div> -->
-            </div>
-          </div>
-      <footer class="footer">Made with love by <a href="https://www.azms.me" target="_blank">Azm</a></footer>
+        <aside>
+            <h1>#100DaysOfCode</h1>
+            <h4>Welcome to Azm's Dev Logs! With my inspiration master Front-End Development Technologies, I decided to do the #100daysOfCode challenge.</h4>
+          </aside>
+          <input type="checkbox" id="menu-toggle"/>
+            <label id="trigger" for="menu-toggle"></label>
+            <label id="burger" for="menu-toggle"></label>
+            <ul id="menu">
+              <li><a href="https://github.com/AzmSurov/DevLogs">Day#1 - Dev's Logs</a></li>
+              <li><a href="https://github.com/AzmSurov/Responsive-Grid">Day#2 - Responsive Masonary Grid</a></li>
+              <!-- <li><a href="#">Portfolio</a></li>
+              <li><a href="#">Contact</a></li> -->
+            </ul>
     </body>
 </html>
