--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <ul id="menu">
               <li><a href="https://github.com/AzmSurov/DevLogs">Day#1 - Dev's Logs</a></li>
               <li><a href="https://github.com/AzmSurov/Responsive-Grid">Day#2 - Responsive Masonary Grid</a></li>
-              <!-- <li><a href="#">Portfolio</a></li>
-              <li><a href="#">Contact</a></li> -->
+              <li><a href="https://github.com/AzmSurov/UnsplashApi">Day#3&4 - UnsplashApi wallpaper site on Masonary Grid</a></li>
+              
             </ul>
     </body>
 </html>
