--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <li><a href="https://github.com/AzmSurov/DevLogs">Day#1 - Dev's Logs</a></li>
               <li><a href="https://github.com/AzmSurov/Responsive-Grid">Day#2 - Responsive Masonary Grid</a></li>
               <li><a href="https://github.com/AzmSurov/UnsplashApi">Day#3&4 - UnsplashApi wallpaper site on Masonary Grid</a></li>
-              
+              <li><a href="https://azmsurov.github.io/colorPalette/">Day#5&6 - Color Palette Generator</a></li>
             </ul>
     </body>
 </html>
